--- a/src/index.css
+++ b/src/index.css
@@ -171,6 +171,7 @@ color: #CCD6F6;
 
 #portfolio-left-inverted {
   margin-top: 1.6rem;
+  
 }
 
 #portfolio-description{
@@ -178,17 +179,17 @@ background-color: #112240;
 padding: 1.4rem;
 width: 50%;
 margin-left: 50%;
-/* position: absolute; */
-z-index: 99;
 font-size: 1.1rem;
+z-index: 99;
 }
 
 #portfolio-description-inverted{
 background-color: #112240;
 padding: 1.4rem;
-width: 50%;
-position: absolute;
+width: 110%;
+position: relative;
 z-index: 99;
+margin-right: 50%;
 font-size: 1.1rem;
 }
 
@@ -205,8 +206,17 @@ font-weight: 100;
 text-align: right;
 }
 
+#port-bottom-inverted{
+text-align: left;
+color: #64FFDA;
+}
+
 #port-bottom span {
 margin-right: 1rem;
+}
+
+#port-bottom-inverted span{
+  margin-right: 1rem;
 }
 
 #port-title-inverted {
@@ -222,9 +232,14 @@ margin-right: 1rem;
     font-size: 1rem;
     font-weight: 1;
     letter-spacing: 0.099ch;
-
+    text-align: right;
 }
-
+#project-type-inverted {
+  color: #64FFDA;
+  font-size: 1rem;
+  font-weight: 1;
+  letter-spacing: 0.099ch;
+}
 
 
 
