--- a/src/index.css
+++ b/src/index.css
@@ -202,13 +202,13 @@ font-weight: 100;
 }
 
 #port-bottom{
- color: #64FFDA;
+color: #A8B2D1;
 text-align: right;
 }
 
 #port-bottom-inverted{
 text-align: left;
-color: #64FFDA;
+color: #A8B2D1;
 }
 
 #port-bottom span {
@@ -241,7 +241,30 @@ margin-right: 1rem;
   letter-spacing: 0.099ch;
 }
 
-
-
-
 /* --------- portfolio-end-------- ---------- */
+
+/* ---------work-------- */
+
+.work{
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  position: relative;
+  margin-top: 18rem;
+}
+
+.work-left{
+  margin-top: 1rem;
+}
+
+.work-right{
+  /* margin-top: 1rem; */
+}
+
+#work-title{
+  font-size: 1.3rem;
+  color: #A8B2D1;
+}
+
+/* ---------work-end-------- */
