--- a/src/index.css
+++ b/src/index.css
@@ -256,15 +256,86 @@ margin-right: 1rem;
 
 .work-left{
   margin-top: 1rem;
+  border-left: 2px solid #8892B0;
+  height: 13rem;
+ margin-right: 2rem;
 }
 
-.work-right{
-  /* margin-top: 1rem; */
-}
+
 
 #work-title{
   font-size: 1.3rem;
   color: #A8B2D1;
+  margin-bottom: 0;
 }
+
+#work-title-span{
+  color: #63FCD8;
+  padding-left: 3px;
+}
+#work-date{
+  margin-bottom: 0;
+  line-height: 1;
+}
+
+@keyframes slide-left {
+  from {
+    opacity: 0;
+    transform: translateX(6rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+}
+
+@keyframes slide-up {
+  from {
+    opacity: 0;
+    transform: translateY(6rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
+}
+
+.work-right-1{
+animation: slide-up 500ms ease-out forwards;
+}
+
+.work-title-active{
+  background-color: #112240;
+  width: 70%;
+    border-left: 2px solid #64FFDA;
+}
+
+.work-left p {
+  padding: 0rem 1rem 0rem 1rem;
+
+}
+.work-left p:hover{
+    background-color: #112240;
+    width: 60%;
+    cursor: pointer;
+   
+}
+
+#work-desc{
+  font-size: 0.97rem;
+  margin-bottom: 0;
+  padding: 0;
+  line-height: 1.2;
+}
+
+#work-desc::before{
+      content: "▹";
+      position: absolute;
+      left: -27px;
+      color:#64FFDA ;
+}
+
 
 /* ---------work-end-------- */
